--- a/Probability-Notes.tex
+++ b/Probability-Notes.tex
@@ -1,10 +1,11 @@
 \documentclass[device=normal, lang=en, fontsize=12pt]{elegantnote}
 \usepackage{amsmath}
 \usepackage{amssymb}
-
+\usepackage{float}
 
 \definecolor{pgcolor}{RGB}{251, 250, 248}
 \pagecolor{pgcolor}
+\numberwithin{equation}{section}
 
 \title{Probability Notes}
 \author{FHYQ-Dong}
@@ -14,39 +15,55 @@
 \begin{document}
 
 \maketitle
+\newpage
+\tableofcontents
+\newpage
 
-\section{Probability Space}
-\begin{definition}[Probability Space]
-    Probability space is a tuple $\left(\varOmega,~\mathcal{F},~\mathbf{P}\right)$ where
-    \begin{itemize}
-        \item Sample space $\varOmega$ is a set of all possible outcomes.
-        \item $ \sigma $-algebra $\mathcal{F}$ is a collection of subsets of $\varOmega$.
-        \item Probability measure $\mathbf{P}$ is a function that assigns a probability to each event in $\mathcal{F}$.
-    \end{itemize}
+
+\input{secs/sec_Probability_Space.tex}
+\input{secs/sec_Conditional_Probability.tex}
+
+
+
+\section{Independence}
+\subsection{Independence}
+\begin{definition}[Independence]
+    Event $A$ and $B$ are independent if:
+    \begin{equation}
+        \mathbf{P}(A \cap B) = \mathbf{P}(A) \cdot \mathbf{P}(B)
+    \end{equation}
+    or equivalently, when $\mathbf{P}(B) \neq 0$:
+    \begin{equation}
+        \mathbf{P}(A|B) = \mathbf{P}(A)
+    \end{equation}
 \end{definition}
+Occurrence of $B$ does not provides no information about the occurrence of $A$.
+\begin{remark}
+    Disjoint events are not independent.
+    \begin{equation}
+    \begin{aligned}
+        \mathbf{P}(A \cap B) &= 0 \\
+        \mathbf{P}(A \cap B) &= \mathbf{P}(A) \cdot \mathbf{P}(B)
+    \end{aligned}
+    \end{equation}
+    Only if $\mathbf{P}(A) = 0$ or $\mathbf{P}(B) = 0$, the two equations can be both satisfied. E.g. when a student is in one class, it is unlikely that he is in another class.
+\end{remark}
 
-\begin{definition}[Sample Space]
-    Sample space $\varOmega$ is a set of all possible outcomes, which should satisfy the following properties:
-    \begin{itemize}
-        \item Mutually Exclusive: The elements in $\varOmega$ should be unique.
-        \item Collectively Exhaustive: The elements in $\varOmega$ should cover all possible outcomes.
-    \end{itemize}
+\subsection{Conditional Independence}
+\begin{definition}[Conditional Independence]
+    Event $A$ and $B$ are conditionally independent given $C$ if:
+    \begin{equation}
+        \mathbf{P}(A \cap B | C) = \mathbf{P}(A | C) \cdot \mathbf{P}(B | C)
+    \end{equation}
 \end{definition}
-
-Once the experiment is conducted, there is \textbf{exactly one} element in the sample space $\varOmega$ occurs.
-
-\begin{example}[Example of Sample Space]
-    Here are some examples of sample space:
-    \begin{itemize}
-        \item Discrete: $\varOmega = \{1, 2, 3, 4, 5, 6\}$ - Rolling a fair die.
-        \item Continuous: $\varOmega = [0, 1]$ - Randomly selecting a real number between 0 and 1.
-    \end{itemize}
-\end{example}
-
-Before we define the $\sigma$-algebra, we need to introduce the concept of \textbf{countable}. We say a set $X$ is countable if there is a bijection between $X$ and $\mathbb{N}$. Some countable sets are: $\mathbb{N}$, $\mathbb{Z}$, $\mathbb{Q}$, $\mathbb{N}^2$, $\mathbb{Z}^2$, $\mathbb{Q}^2$, $\cup_{n=1}X_{n}$. Some uncountable sets are: $\mathbb{R}$, $\mathbb{C}$, $\mathbb{R}^2$, $\mathbb{C}^2$.
-
-\begin{definition}[$\sigma$-algebra]
-    We say a set $\mathcal{F}$  collection of subsets of $\varOmega$ is a $\sigma$-algebra if it satisfies the following properties:
-\end{definition}
-
+\begin{remark}
+    Conditional independence does not imply independence. Information of the mainland of China does not imply the information of Tsinghua University.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{images/image3-1.png}
+    \caption{Conditional Independence}
+    \label{fig:conditional-independence}
+\end{figure}
+As shown in Figure \ref{fig:conditional-independence}, assume $A$ and $B$ are independent. Obviously, $A$ and $B$ are not independent given $C$ (they are disjoint in $C$).
+\end{remark}
 \end{document}
