fix github-action bug

--- a/HW/HW-3.tex
+++ b/HW/HW-3.tex
@@ -57,7 +57,7 @@
     A source transmits a message (a string of symbols) through a noisy communication channel. Each symbol is 0 or 1 with probability $p$ and $1-p$, respectively, and is received incorrectly with probability $\epsilon_0$ and $\epsilon_1$, respectively (see Figure \ref{fig:3.1.1}). Errors in different symbol transmissions are independent.
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.4\textwidth]{images/image3.1.1.png}
+        \includegraphics[width=0.4\textwidth]{images/HW-3.1.1.png}
         \caption{Communication through a noisy channel.}
         \label{fig:3.1.1}
     \end{figure}
@@ -203,12 +203,12 @@
         \centering
         \subfigure[independence but not conditional independence]{
             \label{fig:3.3.1.a}
-            \includegraphics[width=0.3\textwidth]{images/image3.3.1.a.png}
+            \includegraphics[width=0.3\textwidth]{images/HW-3.3.1.a.png}
         }
         \quad
         \subfigure[conditional independence but not independence]{
             \label{fig:3.3.1.b}
-            \includegraphics[width=0.3\textwidth]{images/image3.3.1.b.png}
+            \includegraphics[width=0.3\textwidth]{images/HW-3.3.1.b.png}
         }
         \caption{Examples of conditional independence and independence.}
         \label{fig:3.3.1}
