--- a/Probability-Notes.tex
+++ b/Probability-Notes.tex
@@ -60,7 +60,7 @@ Occurrence of $B$ does not provides no information about the occurrence of $A$.
     Conditional independence does not imply independence. Information of the mainland of China does not imply the information of Tsinghua University.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.3\textwidth]{images/image3-1.png}
+    \includegraphics[width=0.3\textwidth]{images/Note-3.1.png}
     \caption{Conditional Independence}
     \label{fig:conditional-independence}
 \end{figure}
