--- a/secs/sec_Conditional_Probability.tex
+++ b/secs/sec_Conditional_Probability.tex
@@ -52,7 +52,7 @@ We can calculate the total probability with \textit{Devide and Conquer} strategy
 \end{enumerate}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.3\textwidth]{images/image2-1.png}
+    \includegraphics[width=0.3\textwidth]{images/Note-2.1.png}
     \caption{Total Probability Theorem}
     \label{fig:total-probability}
 \end{figure}
