correct some mistake in A1.(d)

--- a/HW/HW-3.tex
+++ b/HW/HW-3.tex
@@ -26,7 +26,7 @@
 
 
 \title{Problem Set 3}
-\author{ FHYQ-Dong, Class **********, Student ID: ********** }
+\author{ FHYQ-Dong, Class ********** Student ID: ********** }
 \date{\today}
 
 \geometry{a4paper, scale=0.8}
@@ -112,7 +112,7 @@
         \Rightarrow \epsilon_0 \in (-\infty, 1) \cup (2, +\infty)
     \end{aligned}
     \end{equation}
-    which means $\forall \epsilon_0 in (0, 1)$, there is always an improvement when the scheme of part \ref{q:1.c} is used.
+    which means $\forall \epsilon_0 \in (0, 1)$, there is always an improvement when the scheme of part \ref{q:1.c} is used.
     \item Denote $D$ as the event that 101 is received, $S_0$ as the event that the symbol is 0 and $S_1$ as the event that the symbol is 1. Then 
     \begin{equation}
         \mathbf{P}(S_0) = p,~ \mathbf{P}(S_1) = 1-p,~ \mathbf{P}(D | S_0) = \epsilon_0^2(1-\epsilon_0),~ \mathbf{P}(D | S_1) = \epsilon_1(1-\epsilon_1)^2
