--- a/HW/HW-3.tex
+++ b/HW/HW-3.tex
@@ -26,7 +26,7 @@
 
 
 \title{Problem Set 3}
-\author{ FHYQ-Dong, Class ********** Student ID: ********** }
+\author{ FHYQ-Dong, Class **********, Student ID: ********** }
 \date{\today}
 
 \geometry{a4paper, scale=0.8}
@@ -197,7 +197,7 @@
         \item 
             \begin{itemize}
                 \item Assume that $A$ and $B$ are independent in Figure \ref{fig:3.3.1.a}. But obviously, $A$ and $B$ are not conditionally independent given $C$ because they are disjoint given $C$.
-                \item Assume each small block in Figure \ref{fig:3.3.1.b} has the same probability. Then $A$ and $B$ are conditionally independent given $C$ but not independent.
+                \item Assume each small block in Figure \ref{fig:3.3.1.b} has the same probability. Then $A$ and $B$ are conditionally independent given $C$ but not independent. (Blue blocks are $A$, red blocks are $B$, and green blocks are $C$.)
             \end{itemize}
         \item If $C$ is sample space $\Omega$.
     \end{enumerate}
@@ -279,7 +279,7 @@
         Notice that $L_n \subseteq N_n$, we have $\mathbf{P}(L_n) = 0$.
         \item $I^c$ means that $\exists n \in \mathbb{Z^*}$ s.t. there are no successes after the $n$-th trial. Thus
         \begin{equation}
-            I^c = \bigcup_{n=1}^\infty L_n
+            I^c = \bigcup_{n=1}^\infty N_n
         \end{equation}
         Since $I^c$ is a countable union of events with probability 0, we have $\mathbf{P}(I^c) = 0 \Rightarrow \mathbf{P}(I) = 1$.
     \end{enumerate}
