--- a/HW/HW-3.tex
+++ b/HW/HW-3.tex
@@ -26,7 +26,7 @@
 
 
 \title{Problem Set 3}
-\author{ FHYQ-Dong, Class **********, Student ID: ********** }
+\author{ FHYQ-Dong, Class ********** Student ID: ********** }
 \date{\today}
 
 \geometry{a4paper, scale=0.8}
@@ -197,7 +197,7 @@
         \item 
             \begin{itemize}
                 \item Assume that $A$ and $B$ are independent in Figure \ref{fig:3.3.1.a}. But obviously, $A$ and $B$ are not conditionally independent given $C$ because they are disjoint given $C$.
-                \item Assume each small block in Figure \ref{fig:3.3.1.b} has the same probability. Then $A$ and $B$ are conditionally independent given $C$ but not independent. (Blue blocks are $A$, red blocks are $B$, and green blocks are $C$.)
+                \item Assume each small block in Figure \ref{fig:3.3.1.b} has the same probability. Then $A$ and $B$ are conditionally independent given $C$ but not independent. (Blue blocks are $A$, red blocks are $B$, and yellow blocks are $C$.)
             \end{itemize}
         \item If $C$ is sample space $\Omega$.
     \end{enumerate}
