--- a/HW/HW-3.tex
+++ b/HW/HW-3.tex
@@ -199,7 +199,7 @@
                 \item Assume that $A$ and $B$ are independent in Figure \ref{fig:3.3.1.a}. But obviously, $A$ and $B$ are not conditionally independent given $C$ because they are disjoint given $C$.
                 \item Assume each small block in Figure \ref{fig:3.3.1.b} has the same probability. Then $A$ and $B$ are conditionally independent given $C$ but not independent. (Blue blocks are $A$, red blocks are $B$, and yellow blocks are $C$.)
             \end{itemize}
-        \item If $C$ is sample space $\Omega$.
+        \item If $C$ is sample space $\varOmega$.
     \end{enumerate}
     \begin{figure}[H]
         \centering
