--- a/secs/sec_Conditional_Probability.tex
+++ b/secs/sec_Conditional_Probability.tex
@@ -1,6 +1,4 @@
 \section{Conditional Probability}
-
-
 \subsection{Conditional Probability}
 \begin{definition}[Conditional Probability]
     Conditional probability is the probability of an event $A$ given that another event $B$ has already occurred. It is denoted by $P(A|B)$ and is defined as:
@@ -46,7 +44,7 @@ For the second equation: 1.event $A$ occurs; 2.event $B$ occurs given $A$; 3.eve
 \subsection{Total Probability Theorem}
 We can calculate the total probability with \textit{Devide and Conquer} strategy:
 \begin{enumerate}
-    \item Devide event $B$ by $A_1, A_2, \cdots A_n$, note that $\bigcup_{i=1}^n A_i = \Omega$ and $A_i \cap A_j = \emptyset$.
+    \item Devide event $B$ by $A_1, A_2, \cdots A_n$, note that $\bigcup_{i=1}^n A_i = \varOmega$ and $A_i \cap A_j = \emptyset$.
     \item Calculate $\mathbf{P}(B | A_i)$ which are easier to calculate.
     \item Sum all the probabilities.
 \end{enumerate}
