--- a/Probability-Notes.tex
+++ b/Probability-Notes.tex
@@ -125,7 +125,7 @@ We want to describe both discrete and continuous RVs in a unified way. An intuit
     \begin{itemize}
         \item Monotonically nondecreasing: $x \leq y \Rightarrow F_{X}(x) \leq F_{X}(y)$. (since $p_{X}(x) \geq 0$ and $f_{X}(x) \geq 0$)
         \item $F_X(x) \to 0$ as $x \to -\infty$ and $F_X(x) \to 1$ as $x \to \infty$.
-        \item When $X$ is continuous: $F_{X}(x)$ is a continuous function, $f_{X}(x) = \frac{\dd{F_{X}}}{\dd{x}}(x)$.
+        \item When $X$ is continuous: $F_{X}(x)$ is a continuous function, $f_{X}(x) = \frac{\dv{F_{X}}}{\dd{x}}(x)$.
         \item When $X$ is discrete: $F_{X}(x)$ i piecewise constant function, $p_{X}(k) = F_{X}(k) - F_{X}(k-1)$.
     \end{itemize}
 \end{property}
